# LEARN-Hub

./: .gitignore  .mcp.json  MIGRATION.md  Makefile  README.md  compose-spring.yml  compose.prod.yml  compose.yml  example.env  package-lock.json
client/: Makefile  (+13 more)
server/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  pom.xml  pyproject.toml  requirements.txt
server/app/: main.py
server/app/api/: auth.py  decorators.py  documents.py  history.py  meta.py  schemas.py
server/app/api/activities/: __init__.py  creation.py  lesson_plan.py  listing.py  pdf.py  recommendations.py
server/app/auth/: __init__.py  auth_service.py  decorators.py  jwt_service.py
server/app/core/: __init__.py  constants.py  engine.py  filters.py  models.py  scoring.py
server/app/db/: database.py
server/app/db/migrations/: env.py
server/app/db/migrations/versions/: 05bfbbeeec18_add_user_history_and_pdf_documents.py  (+10 more)
server/app/db/models/: activity.py  user.py
server/app/services/: email_service.py  llm_client.py  pdf_processor.py  pdf_service.py  recommendation_service.py  user_favourites_service.py  user_search_history_service.py  user_service.py  verification_service.py
server/app/utils/: config.py  constants.py  database_factory.py  email_templates.py  password_generator.py  password_utils.py  pydantic_models.py  response_helpers.py  time_utils.py  validation.py
server/benchmark/: README.md  __init__.py  final-run-25.csv  populate.py  run-20.csv  run-30.csv  run.py
server/scripts/: import_activities.py  init_db.py  populate_demo_data.py  setup_db.py  utils.py
server/src/main/resources/: application-dev.properties  application.properties  logback-spring.xml
server/tests/: conftest.py
server/tests/integration/: __init__.py  conftest.py  test_activities_api.py  test_atomic_user_deletion.py  test_auth_api.py  test_auth_system.py  test_data.py  test_error_handling.py  test_favourites_api.py  test_recommendations.py  test_search_history_api.py  test_teacher_auth.py  test_user_service.py
server/tests/unit/: __init__.py  conftest.py  test_auth_decorators.py  test_llm_client.py  test_pdf_processing_service.py  test_recommendation_engine.py  test_transaction_management.py  test_user_favourites_service.py  test_user_search_history_service.py  test_utils.py  test_validation.py  test_verification_service.py
server/tests/unit/core/: test_engine.py  test_filters.py  test_models.py  test_scoring.py
(+510 files in other folders)
